<resources>
    <string name="app_name">Pedra PapaelTesoura</string>
    <string name="txt_label">Escolha do app</string>
    <string name="txt_resultado">Escolha!!!</string>
    <string name="txt_descricao">Ok vamos jogar :)</string>
    <string name="txt_pedra">Pedra</string>
    <string name="txt_papel">Papel</string>
    <string name="txt_tesoura">Tesoura</string>
    <string name="txt_android">Mr.Robot</string>
    <string name="txt_jogador">Jogador</string>
    <string name="txt_score_android">0</string>
    <string name="txt_score_jogador">0</string>

</resources>