<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_escolha_maquina"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_label"
        app:srcCompat="@drawable/padrao" />

    <TextView
        android:id="@+id/txt_escolha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_resultado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_escolha_maquina" />

    <TextView
        android:id="@+id/txt_descrição"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_descricao"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_escolha" />

    <ImageView
        android:id="@+id/img_tesoura"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="tesoura"
        android:onClick="selecionarTesoura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_papel"
        app:layout_constraintTop_toBottomOf="@+id/txt_descrição"
        app:srcCompat="@drawable/tesoura" />

    <ImageView
        android:id="@+id/img_papel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="papel"
        android:onClick="selecionarPapel"
        app:layout_constraintEnd_toStartOf="@+id/img_tesoura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_pedra"
        app:layout_constraintTop_toBottomOf="@+id/txt_descrição"
        app:srcCompat="@drawable/papel" />

    <ImageView
        android:id="@+id/img_pedra"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="pedra"
        android:onClick="selecionarPedra"
        app:layout_constraintEnd_toStartOf="@+id/img_papel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descrição"
        app:srcCompat="@drawable/pedra" />

    <TextView
        android:id="@+id/text_name_pedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_pedra"
        android:textAlignment="center"
        android:textColor="@color/txt_PPT"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_papel" />

    <TextView
        android:id="@+id/text_name_tesoura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:text="@string/txt_tesoura"
        android:textAlignment="center"
        android:textColor="@color/txt_PPT"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_papel" />

    <TextView
        android:id="@+id/text_name_papel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_papel"
        android:textAlignment="center"
        android:textColor="@color/txt_PPT"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/text_name_tesoura"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/text_name_pedra"
        app:layout_constraintTop_toBottomOf="@+id/img_papel" />

</android.support.constraint.ConstraintLayout>